# compression-liquidity

./: .gitignore  CDFD.py  CONTRIBUTING.md  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: tests.yml
experiments/: optionA_erls_vs_lambda.py
experiments/runners/: erls_vs_lambda_core.py  shortfall_vs_lambda_core.py
experiments/scripts/: check_reproducibility.py  experiment_1_fixed_buffers.py  experiment_2_planner.py  experiment_2_recalibrate_buffers.py  experiment_3_behavioural.py  paper_config.py
paper/: io.py  make_all.py  meta.py  paths.py
paper/figures/: exp1_activation.py  exp1_make_all.py  exp1_mechanism_shares.py  exp1_normalized_shortfall_reduction.py  exp2_make_all.py  exp3_make_all.py
paper/runners/: exp1.py  exp2.py  exp3.py
paper/specs/: exp1.py  exp2.py  exp3.py  paper_base.py
scratch/: check_network_ensemble.py  optionA_erls_vs_lambda.py  optionA_erls_vs_lambda_overlay.py  shock_demo.py  test_compression.py  test_compression_validation.py  test_fpa_paper_examples.py  test_networks.py
scratch/yijie_code/: CDFD.py  Experiment1_NetworkVariability.ipynb  Experiment2_NetworkVariability.ipynb  Experiment3_NetworkVariability.ipynb  full_payment_algo.py  risk_analysis.py
sratch/yijie_code/: copula_shock_generator_fixed.py
src/: README.md  base_cases.py  buffers.py  compression.py  erls.py  experiment_specs.py  experiments.py  networks.py  node_impact.py  plots.py  rng.py  shocks.py  simulation.py  stats.py
tests/: fixtures.py  test_compression.py  test_erls.py  test_experiments.py  test_fpa_paper_examples.py  test_networks.py  test_shocks.py  test_stats.py
