[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "compression-liquidity"
version = "0.1.0"
description = "Simulation framework for portfolio compression and systemic liquidity risk"
readme = "README.md"
requires-python = ">=3.10"

authors = [
    { name = "Bazil Sansom", email = "Bazil.Sansom@warwick.ac.uk" },
]

license = { text = "MIT" }

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "numpy>=1.24",
    "networkx>=3.0",
    "scipy>=1.10",
    "pulp>=2.7",
    "ortools>=9.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "black>=24.0",
    "ruff>=0.6.0",
    "ipython",
    "matplotlib>=3.8",
]

# --------------------------------------------------------------------
# Setuptools configuration
# --------------------------------------------------------------------
[tool.setuptools]
[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*", "scratch*", "docs*"]

# --------------------------------------------------------------------
# Pytest configuration
# --------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

# --------------------------------------------------------------------
# Black configuration
# --------------------------------------------------------------------
[tool.black]
line-length = 88
target-version = ["py310"]

# --------------------------------------------------------------------
# Ruff configuration
# --------------------------------------------------------------------
[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
